--- a/index.html
+++ b/index.html
@@ -57,7 +57,70 @@
             <div class="slide-thumb"></div> 
         </nav>
     </section><!--FIM SEC 1-->
-    <section id="sec2">
+    <section class="secqf"><!--FIM Quem somos -->
+        <div class="left-side-secqf">
+            <h1>Quem Somos</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga quis magni, molestiae quas atque quo ab et alias? Quaerat, assumenda? Vero cumque, incidunt autem quia expedita quas necessitatibus laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dolorem explicabo, aperiam blanditiis, accusantium eius rerum dolore similique neque nostrum temporibus obcaecati voluptates dicta quia voluptas modi labore quae unde. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores voluptate, repellat ducimus suscipit totam cum assumenda ad labore perferendis quibusdam vel dolore non neque optio, voluptates veritatis ipsam magnam quas?</p>
+            <button class="item-nav-destaque">Orçamento</button>
+        </div>
+        <div class="right-side-secqf">
+            <div class="product">
+                <h2 class="product-category">Feedbacks</h2>
+                <button class="pre-btn"><img src="assets/icons/arrow.png" alt=""></button>
+                <button class="nxt-btn"><img src="assets/icons/arrow.png" alt=""></button>
+                <div class="product-container">
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/imgs/teste.png" class="product-thumb" alt="">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-short-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusamus eius optio laudantium illo consequuntur incidunt quidem eligendi.<br><span><b>Felipe Goncalves</b></span></p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/imgs/teste.png" class="product-thumb" alt="">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-short-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusamus eius optio laudantium illo consequuntur incidunt quidem eligendi.<br><span><b>Felipe Goncalves</b></span></p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/imgs/teste.png" class="product-thumb" alt="">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-short-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusamus eius optio laudantium illo consequuntur incidunt quidem eligendi.<br><span><b>Felipe Goncalves</b></span></p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/imgs/teste.png" class="product-thumb" alt="">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-short-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusamus eius optio laudantium illo consequuntur incidunt quidem eligendi.<br><span><b>Felipe Goncalves</b></span></p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/imgs/teste.png" class="product-thumb" alt="">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-short-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusamus eius optio laudantium illo consequuntur incidunt quidem eligendi.<br><span><b>Felipe Goncalves</b></span></p>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-image">
+                            <img src="assets/imgs/teste.png" class="product-thumb" alt="">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-short-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus accusamus eius optio laudantium illo consequuntur incidunt quidem eligendi.<br><span><b>Felipe Goncalves</b></span></p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </section><!--FIM SEC Quem Somos-->
+    <section id="sec2"><!-- SEC 2-->
         <div class="text-box-sec2">
             <h2>Com a Brusun é só vantagens</h2>
         </div>
@@ -99,8 +162,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section id="sec3">
+    </section><!--FIM SEC 2-->
+    <section id="sec3"><!-- SEC 3-->
         <div class="left-side-sec3">
             <div class="left-top-side">
                 <h3 class="init-hidden">25 Anos</h3>
@@ -121,7 +184,7 @@
             <img src="./assets/imgs/GARANTIDO.png" class="class-span-right-4" alt="Garantido">
         </div>
         <div class="virtual-box-background-bottom"></div>
-    </section>
+    </section><!--FIM SEC 3-->
     <section id="sec5"><!--INICIO SEC 5-->
         <div class="economia-box-sec5">
             <h2>Simule sua economia</h2>
@@ -161,6 +224,5 @@
         <a href="https://beacons.ai/novaya" target="_blank" rel=”NoFollow”>Design by</a>
         <a href="https://beacons.ai/novaya" target="_blank" rel=”NoFollow”><img src="./assets/icons/novaya-icon.png" alt="Icone de acesso para a página da Novaya"></a>
     </footer>
-   
 </body>
 </html>
