--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="btn-nav-icon"></span></Button>
             </button>
             <ul class="nav-box-itens">
-                <li class="right-nav-item"><a href="#" class="item-nav">Quem Somos</a></li>
+                <li class="right-nav-item"><a href="#secqf" class="item-nav">Quem Somos e Feedbacks</a></li>
                 <li class="right-nav-item"><a href="#sec2" class="item-nav">Vantagens</a></li>
                 <li class="right-nav-item"><a href="#sec5" class="item-nav item-nav-destaque">Orçamento</a></li>
             </ul>
@@ -57,7 +57,7 @@
             <div class="slide-thumb"></div> 
         </nav>
     </section><!--FIM SEC 1-->
-    <section class="secqf"><!--FIM Quem somos -->
+    <section class="secqf" id="secqf"><!--FIM Quem somos -->
         <div class="left-side-secqf">
             <h1>Quem Somos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil fuga quis magni, molestiae quas atque quo ab et alias? Quaerat, assumenda? Vero cumque, incidunt autem quia expedita quas necessitatibus laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dolorem explicabo, aperiam blanditiis, accusantium eius rerum dolore similique neque nostrum temporibus obcaecati voluptates dicta quia voluptas modi labore quae unde. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores voluptate, repellat ducimus suscipit totam cum assumenda ad labore perferendis quibusdam vel dolore non neque optio, voluptates veritatis ipsam magnam quas?</p>
