--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <p>Somos uma empresa do ramo de energia solar e instalações elétricas em geral. Fundada em 2013 inicialmente no ramo de instalações elétricas na cidade de Cachoeiro de Itapemirim no estado do Espírito Santo. E em 2019 nos capacitamos e iniciamos nossos atendimentos no ramo de instalações de sistema fotovoltaico (Energia solar) e desde então toda equipe BRUSUN não parou mais de se aperfeiçoar e se atualizar aos novos equipamentos e leis que regem o segmento. 
             Hoje atuamos em todo sul do estado do Espírito Santo com soluções completas para nossos clientes como dimensionamento, equipamentos, projeto, homologação junto a concessionária de energia elétrica, etc. Cuidamos de tudo para que você nosso cliente não precise se preocupar e nem se ocupar com nada. Você e sua família só terão que desfrutar de todos os benefícios e economia que seu sistema solar vai lhe proporcionar. 
             Então não perca mais tempo, entre em contato agora mesmo com a BRUSUN e solicite seu orçamento.</p>
-            <div>
-                <a href="#sec5" class="item-nav-destaque">Faça sua Simulação</a>
+            <div class="box-btn-qs">
+                <a href="#sec5" class="item-nav-destaque btn-qs">Faça sua Simulação</a>
             </div>
         </div>
         <div class="right-side-secqf">
